--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="scores"><a href="./final.html">View High Scores</a></div>
+    <div class="scores"><a href="./final.html"target=" ">View High Scores</a></div>
 
     <div class="timer">Time:<span id="time">60</span></div>
 
@@ -38,10 +38,11 @@
 
         <div id="end-screen" class="hide">
             <h2>All done!</h2>
-            <p>Your final scoore is <span id="final score"></span></p>
+            <p>Your final scoore is </p>
             <p>
             Enter your initials: <input type="text" name="initials" id="initials" />
             </p>
+            <button class="score">Submit</button>
         </div>
 
 
